hphp/hack/test/typecheck/async_hint4.php.exp
File "async_hint4.php", line 7, characters 39-39:
Was expecting an `Awaitable` return type hint (Typing[4174])
