hphp/hack/test/typecheck/async_hint4.php
<?hh

class C {}

class Foo {
  // Testing method
  public async function wrong_hint(): C {
    throw new Exception();
  }
}
